# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  entrypoint-dev.sh  entrypoint-prod.sh  entrypoint-test.sh  gunicorn_config.py  logs.txt  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml  my-workflow.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
tests/: pytest.ini  test_integration.py  tests_integration.py  tests_main.py
tests_e2e/: test_e2e.py  tests_e2e.py
todo_app/: app.py  dump.py  flask_config.py  item.py  viewmodel.py
todo_app/data/: session_items.py
todo_app/templates/: index.html
todo_app/tests/: tests.py
